--- a/yahoo baba.html
+++ b/yahoo baba.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="col-md-6 pl-5 d-flex justify-content-center  circul1">
-               <div class="circul3"> <div class="circul2"> <img src="/bg3.jpeg" alt="" ></div></div>
+               <div class="circul3"> <div class="circul2"> <img src="bg3.jpeg" alt="" ></div></div>
             </div>
         </div>
     </div>
@@ -115,7 +115,7 @@
             <div class="col-md-6">
                 <div class="test1">
 
-                    <img src="/bill gates.jfif" alt="">
+                    <img src="bill gates.jfif" alt="">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti, optio!</p>
                     <div class="name">bill gates</div>
                     <div class="company">social gateway</div>
@@ -124,7 +124,7 @@
             <div class="col-md-6">
                 <div class="test1">
 
-                    <img src="/steve.jfif" alt="">
+                    <img src="steve.jfif" alt="">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti, optio!</p>
                     <div class="name">steve jobs</div>
                     <div class="company">Apple</div>
@@ -142,7 +142,7 @@
          </div>
        <div class="col-md-3">
         <div class="card">
-            <img src="/c1.jpg" class="card-img-top" alt="">
+            <img src="c1.jpg" class="card-img-top" alt="">
             <div class="card-body">
                 <h2 class="card-title cardh" >Techlogix</h2>
                 <h4 class="date">June 27,2020</h4>
@@ -155,7 +155,7 @@
 
        <div class="col-md-3">
         <div class="card">
-            <img src="/c1.jpg" class="card-img-top" alt="">
+            <img src="c1.jpg" class="card-img-top" alt="">
             <div class="card-body">
                 <h2 class="card-title cardh" >confiz</h2>
                 <h4 class="date">april 30,2020</h4>
@@ -168,7 +168,7 @@
 
        <div class="col-md-3">
         <div class="card">
-            <img src="/c1.jpg" class="card-img-top" alt="">
+            <img src="c1.jpg" class="card-img-top" alt="">
             <div class="card-body">
                 <h2 class="card-title cardh" >Arbisoft</h2>
                 <h4 class="date">August 17,2020</h4>
@@ -181,7 +181,7 @@
 
           <div class="col-md-3">
         <div class="card">
-            <img src="/c1.jpg" class="card-img-top" alt="">
+            <img src="c1.jpg" class="card-img-top" alt="">
             <div class="card-body">
                 <h2 class="card-title cardh" >mindstorm</h2>
                 <h4 class="date">october 9,2020</h4>
